# historical_flights_airport_gym

./: .dockerignore  .gitignore  Dockerfile  Makefile  pyproject.toml
.github/workflows/: deploy_etl_flight.yml
database/: README.md  silver_logical_model.md
database/conceptual_model/: silver_conceptual_model.md
ecr-module/: backend.tf  main.tf  outputs.tf
historical_flights_airport_gym/conectores/anac/: lambda_balancer.py  lambda_handler.py
historical_flights_airport_gym/soda/: check_function.py
historical_flights_airport_gym/soda/sources/: staging_bronze_check.yml
historical_flights_airport_gym/utils/: build_path.py  get_data.py  transformations.py
historical_flights_airport_gym/utils/aws/: S3.py
historical_flights_airport_gym/utils/duckdb/: connect_duckdb.py
historical_flights_airport_gym/utils/quality/: check.py
historical_flights_airport_gym/utils/queries/: query.py
infra/: backend.tf  main.tf  variables.tf
infra/modules/iam/: main.tf  outputs.tf  variables.tf
infra/modules/lambda/: main.tf  variables.tf
infra/modules/s3/: main.tf  outputs.tf
tests/anac/: test_lambda_balancer.py  test_lambda_handler.py
tests/data_quality_checks/: about_test_data_quality.md  test_quality.py
tests/medalion_process/: about_tests.md
tests/utils/: test_build_path_raw.py  test_duckdb.py  test_queries_integracao.py  test_request.py  test_s3.py  test_soda.py  test_transformations.py
