[tool.poetry]
name = "historical-flights-airport-gym"
version = "0.1.0"
description = ""
authors = ["Mateus Almeida <mateusalmeida881@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.5"
boto3 = "^1.40.43"


[tool.poetry.group.dev.dependencies]
pre-commit = "^4.3.0"
pytest = "^8.4.2"
pytest-cov = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
