[tool.poetry]
name = "historical-flights-airport-gym"
version = "0.1.0"
description = ""
authors = ["Mateus Almeida <mateusalmeida881@gmail.com>"]
readme = "README.md"

[[tool.poetry.source]]
name = "soda"
url = "https://pypi.cloud.soda.io/simple"
priority = "explicit"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.5"
boto3 = "^1.40.43"
duckdb = "^1.1.3"
soda-duckdb = { version = ">4.0.0", source = "soda", allow-prereleases = true }
setuptools = "^80.9.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "^4.3.0"
pytest = "^8.4.2"
pytest-cov = "^7.0.0"
moto = "^5.1.14"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
select = [
    "C",  # mccabe rules
    "F",  # pyflakes rules
    "E",  # pycodestyle error rules
    "W",  # pycodestyle warning rules
    "B",  # flake8-bugbear rules
    "I",  # isort rules
]
ignore = [
    "C901",  # max-complexity-10
    "E501",  # line-too-long
]

[tool.ruff.format]
indent-style = "space"
quote-style = "double"
